docs/openshift-evidence/live-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: agentiq-api
    version: '1.0'
  name: agentiq-api
  namespace: saduvamsikrishna513-dev
spec:
  progressDeadlineSeconds: 600
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: agentiq-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-09-08T16:03:48-05:00'
      labels:
        app: agentiq-api
    spec:
      containers:
      - env:
        - name: LOG_LEVEL
          value: INFO
        - name: ALLOWED_ORIGINS
          value: '*'
        - name: LANGCHAIN_TRACING_V2
          value: 'false'
        image: image-registry.openshift-image-registry.svc:5000/saduvamsikrishna513-dev/agentiq:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 1
        name: agentiq-api
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8000
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 800m
            memory: 1536Mi
          requests:
            cpu: 250m
            memory: 512Mi
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /health
            port: 8000
            scheme: HTTP
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
      terminationGracePeriodSeconds: 30
